[gd_scene load_steps=5 format=3 uid="uid://rcj4aoy8xj8j"]

[ext_resource type="PackedScene" uid="uid://c1nh3rm1msbwd" path="res://ai-bots-ibu/robu/models/robu.glb" id="1_vmw7i"]
[ext_resource type="Script" path="res://ai-bots-ibu/robu/scripts/robu.gd" id="2_mq2co"]

[sub_resource type="BoxShape3D" id="BoxShape3D_aflc1"]
size = Vector3(3.26785, 1.04162, 2.91477)

[sub_resource type="BoxShape3D" id="BoxShape3D_7pr86"]
size = Vector3(28.4459, 5.28058, 29.9129)

[node name="robu" instance=ExtResource("1_vmw7i")]
script = ExtResource("2_mq2co")

[node name="Skeleton3D" parent="idle" index="0"]
bones/0/position = Vector3(0.253578, 1.04142, -105.349)
bones/0/rotation = Quaternion(-0.712723, -0.0146587, -0.00385275, 0.701282)
bones/1/rotation = Quaternion(-0.0635046, -0.000957613, -0.0115473, 0.997914)
bones/2/position = Vector3(-1.01922e-07, 11.1908, -6.09008e-07)
bones/2/rotation = Quaternion(-0.0335607, 0.000817703, -0.000795466, 0.999436)
bones/3/rotation = Quaternion(0.0392426, 0.00063887, -0.00283409, 0.999225)
bones/4/rotation = Quaternion(-0.0234347, -0.002664, -0.00375129, 0.999715)
bones/5/position = Vector3(5.5627e-07, 3.28022, 0.313329)
bones/5/rotation = Quaternion(-0.0671939, -0.0499881, -0.0791183, 0.993341)
bones/7/position = Vector3(3.59276, 8.51421, -0.0410977)
bones/7/rotation = Quaternion(0.60838, 0.367275, -0.6283, 0.316579)
bones/8/position = Vector3(-1.44483e-07, 14.4488, 1.01794e-05)
bones/8/rotation = Quaternion(0.371308, 0.181824, 0.054281, 0.908913)
bones/9/position = Vector3(2.16079e-06, 23.1603, 6.67384e-07)
bones/9/rotation = Quaternion(-3.11725e-07, 6.42494e-09, 0.0769075, 0.997038)
bones/10/position = Vector3(3.31882e-06, 24.0718, -1.39152e-06)
bones/10/rotation = Quaternion(0.014031, 0.00247201, 0.0172431, 0.99975)
bones/11/position = Vector3(-1.72309, 2.08717, 0.923712)
bones/11/rotation = Quaternion(0.0216151, 0.0844927, 0.271372, 0.958515)
bones/12/position = Vector3(-1.19343e-07, 3.87038, 4.91736e-06)
bones/12/rotation = Quaternion(0.164312, 0.0044554, -0.147532, 0.975303)
bones/13/position = Vector3(-2.44406e-06, 4.71065, -5.13354e-06)
bones/13/rotation = Quaternion(-0.224053, -0.026104, 0.119356, 0.966888)
bones/14/position = Vector3(-7.98702e-06, 3.83035, 1.99676e-05)
bones/15/position = Vector3(-2.85551, 14.6694, 0.398761)
bones/15/rotation = Quaternion(0.167509, -0.0127893, 0.0226674, 0.985527)
bones/16/position = Vector3(2.03166e-06, 3.24861, -1.16119e-06)
bones/16/rotation = Quaternion(0.278058, 1.01848e-07, -0.0284953, 0.960142)
bones/17/position = Vector3(1.97144e-06, 2.65959, 4.34607e-06)
bones/17/rotation = Quaternion(0.166515, -1.08635e-08, -0.0170645, 0.985891)
bones/18/position = Vector3(-6.76176e-07, 3.63318, -7.25439e-06)
bones/19/position = Vector3(-1.69408e-05, 14.4098, 1.48941e-05)
bones/19/rotation = Quaternion(0.173006, -0.00393322, -0.0328746, 0.984364)
bones/20/position = Vector3(-3.4683e-07, 3.25905, 2.54524e-06)
bones/20/rotation = Quaternion(0.260563, 7.43061e-08, -0.0267023, 0.965087)
bones/21/position = Vector3(0.00138558, 2.47485, 3.02133e-06)
bones/21/rotation = Quaternion(0.221281, 8.93164e-08, -0.0226766, 0.974946)
bones/22/position = Vector3(0.00169802, 2.338, -5.06639e-06)
bones/23/position = Vector3(3.30494, 13.1915, -0.322022)
bones/23/rotation = Quaternion(0.238002, 0.00137043, -0.0676281, 0.968907)
bones/24/position = Vector3(9.6109e-07, 2.71763, 3.63046e-06)
bones/24/rotation = Quaternion(0.291816, 3.9941e-08, -0.0299053, 0.956007)
bones/25/position = Vector3(-2.29714e-06, 2.13446, 6.93953e-06)
bones/25/rotation = Quaternion(0.305535, -7.97579e-08, -0.0313114, 0.951666)
bones/26/position = Vector3(9.64137e-07, 2.78689, -3.5675e-06)
bones/27/position = Vector3(5.61421, 11.6363, 0.51655)
bones/27/rotation = Quaternion(0.249907, -0.0749864, -0.0688219, 0.962905)
bones/28/position = Vector3(2.0062e-06, 1.55937, -2.44202e-06)
bones/28/rotation = Quaternion(0.281419, 1.26228e-07, -0.0288397, 0.959151)
bones/29/position = Vector3(1.07032e-06, 1.5406, -1.02397e-05)
bones/29/rotation = Quaternion(0.233319, -6.70632e-08, -0.0239106, 0.972106)
bones/30/position = Vector3(-1.49054e-06, 1.66872, -1.48285e-05)
bones/31/rotation = Quaternion(0.586917, -0.399673, 0.613341, 0.345836)
bones/32/position = Vector3(1.84852e-06, 14.4488, -2.10123e-06)
bones/32/rotation = Quaternion(0.46517, 0.00695244, 0.0601557, 0.883148)
bones/33/position = Vector3(2.29903e-07, 23.1603, 3.11428e-06)
bones/33/rotation = Quaternion(-3.42163e-07, 8.10955e-08, -0.125259, 0.992124)
bones/34/position = Vector3(1.10834e-06, 24.0717, -5.17633e-06)
bones/34/rotation = Quaternion(0.0066773, -0.104933, -0.126143, 0.986424)
bones/35/position = Vector3(1.50905, 4.17341, 1.927)
bones/35/rotation = Quaternion(0.0912113, -0.0732497, -0.27196, 0.955172)
bones/36/position = Vector3(6.73505e-06, 3.87042, -1.41243e-05)
bones/36/rotation = Quaternion(0.0993328, -0.0398093, 0.166748, 0.980175)
bones/37/position = Vector3(-1.96699e-06, 4.71034, -1.98164e-06)
bones/37/rotation = Quaternion(-0.189137, 0.0341141, -0.146861, 0.970307)
bones/38/position = Vector3(-5.72205e-06, 3.83037, -1.88351e-05)
bones/39/position = Vector3(2.8555, 14.6694, 0.398994)
bones/39/rotation = Quaternion(0.10405, 0.009225, -0.0484466, 0.993349)
bones/40/position = Vector3(-7.74893e-07, 3.24859, 5.71732e-07)
bones/40/rotation = Quaternion(0.337241, 2.94427e-07, 0.0265847, 0.941043)
bones/41/position = Vector3(5.39545e-06, 2.65961, 6.08624e-06)
bones/41/rotation = Quaternion(0.237472, -7.43167e-08, 0.0187199, 0.971214)
bones/42/position = Vector3(0.00267601, 1.99171, -7.98702e-06)
bones/43/position = Vector3(8.30701e-06, 14.4098, -5.68226e-06)
bones/43/rotation = Quaternion(0.21192, 0.0134944, -0.00907638, 0.977152)
bones/44/position = Vector3(9.57202e-07, 3.2591, 8.47199e-07)
bones/44/rotation = Quaternion(0.298818, -2.76023e-07, 0.0235551, 0.954019)
bones/45/position = Vector3(-0.000904113, 2.55653, -2.76369e-06)
bones/45/rotation = Quaternion(0.241741, -2.39993e-09, 0.0190562, 0.970154)
bones/46/position = Vector3(-8.39324e-07, 3.6739, 3.73461e-06)
bones/47/position = Vector3(-3.30495, 13.1915, -0.322006)
bones/47/rotation = Quaternion(0.27154, 0.00632426, 0.035996, 0.961733)
bones/48/position = Vector3(-2.07793e-06, 2.71759, 1.46449e-06)
bones/48/rotation = Quaternion(0.31032, -4.04256e-08, 0.0244621, 0.950317)
bones/49/position = Vector3(-8.72589e-07, 2.1345, 5.42699e-06)
bones/49/rotation = Quaternion(0.205993, -2.68545e-07, 0.0162381, 0.978419)
bones/50/position = Vector3(1.38917e-06, 2.78682, -9.37777e-06)
bones/51/position = Vector3(-2.06218, 5.99846, 0.0839612)
bones/51/rotation = Quaternion(0.24974, 0.118893, 0.117023, 0.953834)
bones/52/position = Vector3(-2.39075e-06, 1.55931, 9.86558e-08)
bones/52/rotation = Quaternion(0.255575, 2.0234e-08, 0.0201467, 0.966579)
bones/53/position = Vector3(-7.43875e-07, 1.5406, -2.63832e-06)
bones/53/rotation = Quaternion(0.207089, 1.36863e-08, 0.0163246, 0.978186)
bones/54/position = Vector3(-1.48879e-06, 1.66869, 2.79684e-06)
bones/55/rotation = Quaternion(-0.0962726, 0.0197815, 0.994105, 0.0457776)
bones/56/position = Vector3(-0.270482, 31.4752, -0.0338641)
bones/56/rotation = Quaternion(-0.152188, 0.0566246, -0.0188641, 0.986548)
bones/57/rotation = Quaternion(0.480064, 0.0752638, 0.0205578, 0.873757)
bones/58/rotation = Quaternion(0.354871, 0.0338195, 0.00432099, 0.934294)
bones/60/rotation = Quaternion(0.0663206, 0.0616463, 0.995173, -0.0378484)
bones/61/position = Vector3(1.54369e-06, 43.365, 3.14613e-06)
bones/61/rotation = Quaternion(-0.203739, -0.017909, 0.0197203, 0.978663)
bones/62/rotation = Quaternion(0.512458, -0.0694801, -0.00558507, 0.855879)
bones/63/rotation = Quaternion(0.354872, -0.0338184, -0.00432407, 0.934293)

[node name="Label3D" type="Label3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0146968, 1.77074, -0.0569466)
visible = false
modulate = Color(0.419608, 0.615686, 1, 1)
text = "Press Q to ask questions"

[node name="Area3D" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.231547, 0.359356, 0.212476)
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.430056, 0.849921, 0.144872)
shape = SubResource("BoxShape3D_aflc1")

[node name="TextEdit" type="TextEdit" parent="." index="4"]
visible = false
offset_left = 478.0
offset_top = 225.0
offset_right = 679.0
offset_bottom = 260.0

[node name="RichTextLabel" type="RichTextLabel" parent="." index="5"]
visible = false
modulate = Color(0.00434434, 0.0286246, 0.0872947, 1)
self_modulate = Color(0.000849962, 0.00786928, 0.0122297, 1)
offset_left = 351.0
offset_top = 176.0
offset_right = 812.0
offset_bottom = 469.0
tab_size = 5

[node name="HTTPRequest" type="HTTPRequest" parent="." index="6"]

[node name="greetingArea" type="Area3D" parent="." index="7"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="greetingArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.609063, 2.033, -0.56762)
shape = SubResource("BoxShape3D_7pr86")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="body_entered" from="greetingArea" to="." method="_on_greeting_area_body_entered"]
[connection signal="body_exited" from="greetingArea" to="." method="_on_greeting_area_body_exited"]
